--- a/src/app/Validateur/valider-demande/valider-demande.component.html
+++ b/src/app/Validateur/valider-demande/valider-demande.component.html
@@ -1,7 +1,7 @@
 <div class=" d-flex align-items-center justify-content-center w-100 v-100">
     <div class="row w-100 justify-content-center">
         <div class="col-md-10 col-sm-12">
-            <form [formGroup]="demandeForm" *ngIf="demandeForm" (ngSubmit)="AccepterDemande()">
+            <form [formGroup]="demandeForm" *ngIf="demandeForm">
                 <div class="row gx-2 p-2 justify-content-between border rounded">
                     <div class="col-md-3 col-12">
                         <div class="form-group">
@@ -133,11 +133,6 @@
                     </div>
                 </div>
 
-
-
-
-
-
                 <div class="row gx-2 p-2 justify-content-between border rounded mt-3">
                     <div class="form-group">
                         <label for="text">Text</label>
@@ -152,7 +147,10 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-around mt-3 mx-2">
-                    <button type="submit" class="btn btn-primary">Accepter</button>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#confirmationModal">Accepter</button>
+
+
                     <button type="button" class="btn btn-danger" data-bs-toggle="modal"
                         data-bs-target="#rectifierModal">A
                         rectifier</button>
@@ -179,6 +177,26 @@
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
                     (click)="ARectifierDemande(R.value)">Rectifier</button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Bootstrap Modal -->
+<div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmationModalLabel">Confirmation</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Êtes-vous sûr de vouloir accepter cette demande ?</p>
+            </div>
+            <div class="modal-footer"><button type="submit" class="btn btn-primary" data-bs-dismiss="modal"
+                    (click)="AccepterDemande()">Confirm</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+
             </div>
         </div>
     </div>
