add trace demande functionality

--- a/src/app/Imprimerie_Officielle/nav-imp/nav-imp.component.html
+++ b/src/app/Imprimerie_Officielle/nav-imp/nav-imp.component.html
@@ -15,6 +15,10 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
+                        (click)="navigateToListeDemandes()" role="button">Liste Demandes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
                         (click)="seDeconneter()" role="button">Déconnecter</a>
                 </li>
             </ul>
