--- a/src/app/Login/login/login.component.html
+++ b/src/app/Login/login/login.component.html
@@ -30,7 +30,7 @@
                         Le mot de passe doit contenir au moins 8 caractères.
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary mt-3">Submit</button>
+                <button type="submit" class="btn btn-primary mt-3">Se Connecter</button>
             </form>
         </div>
     </div>
