--- a/src/app/Validateur/demandes-avalider/demandes-avalider.component.html
+++ b/src/app/Validateur/demandes-avalider/demandes-avalider.component.html
@@ -1,22 +1,26 @@
-<table class="table table-hover">
-    <thead class="table table-warning">
-        <tr>
-            <th>Date Demande</th>
-            <th>Objet</th>
-            <th>Statut</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngIf="demandes.length === 0">
-            <td colspan="3">Aucune demande à valider</td>
-        </tr>
-        <ng-container *ngFor="let demande of demandes">
-            <tr role="button" (click)="navigateToDemande(demande.id_demande!)" *ngIf="(demande.statut?.id_statut==1) ">
-
-                <td>{{ demande.date_demande | date }}</td>
-                <td>{{ demande.objet }}</td>
-                <td>{{ demande.statut?.label }}</td>
+<div class="container">
+    <h1>Demandes à valider</h1>
+    <table class="table table-hover table-bordered">
+        <thead class="table table-light sticky-top top-0">
+            <tr>
+                <th>Date Demande</th>
+                <th>Objet</th>
+                <th>Statut</th>
             </tr>
-        </ng-container>
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            <tr *ngIf="demandes.length === 0">
+                <td colspan="3">Aucune demande à valider</td>
+            </tr>
+            <ng-container *ngFor="let demande of demandes">
+                <tr role="button" (click)="navigateToDemande(demande.id_demande!)"
+                    *ngIf="(demande.statut?.id_statut==1) ">
+
+                    <td>{{ demande.date_demande | date }}</td>
+                    <td>{{ demande.objet }}</td>
+                    <td>{{ demande.statut?.label }}</td>
+                </tr>
+            </ng-container>
+        </tbody>
+    </table>
+</div>
