--- a/src/app/Imprimerie_Officielle/publier-demande/publier-demande.component.html
+++ b/src/app/Imprimerie_Officielle/publier-demande/publier-demande.component.html
@@ -71,7 +71,7 @@
                 <div class="d-flex justify-content-around mt-3 mx-2"><button type="button" class="btn btn-primary"
                         data-bs-toggle="modal" data-bs-target="#publierModal">Publier</button>
                     <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                        data-bs-target="#rectifierModal">A rectifier</button>
+                        data-bs-target="#rectifierModal">Rectifier</button>
 
                 </div>
             </form>
