--- a/src/app/Imprimerie_Officielle/trace-demande/trace-demande.component.html
+++ b/src/app/Imprimerie_Officielle/trace-demande/trace-demande.component.html
@@ -5,8 +5,8 @@
 
     <div class="row">
         <div class="col">
-            <table class="table">
-                <thead>
+            <table class="table table-bordered table-hover">
+                <thead class="table-light sticky-top top-0">
                     <tr>
                         <th>Date Mise à Jour</th>
                         <th>Remarque</th>
