--- a/src/app/Validateur/valider-demande/valider-demande.component.html
+++ b/src/app/Validateur/valider-demande/valider-demande.component.html
@@ -152,8 +152,7 @@
 
 
                     <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                        data-bs-target="#rectifierModal">A
-                        rectifier</button>
+                        data-bs-target="#rectifierModal">Rectifier</button>
                 </div>
             </form>
         </div>
