Removed num_Demande as it's not needed

--- a/src/app/Agent/detail-demande/detail-demande.component.html
+++ b/src/app/Agent/detail-demande/detail-demande.component.html
@@ -115,7 +115,7 @@
             </div>
 
 
-            <div class="col-md-5">
+            <!-- <div class="col-md-5">
                 <div class="form-group">
                     <label for="num_demande">Num demande</label>
                     <input type="number" class="form-control" id="num_demande" formControlName="num_demande" required
@@ -126,7 +126,7 @@
                         Please enter a valid number.
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
 
@@ -198,12 +198,12 @@
                 <p>{{demande.annee_demande}}</p>
             </div>
         </div>
-        <div class="col-md-3 col-sm-5 col-12">
+        <!-- <div class="col-md-3 col-sm-5 col-12">
             <div>
                 <h6>Numero Demande</h6>
                 <p>{{demande.num_demande}}</p>
             </div>
-        </div>
+        </div> -->
         <div class="col-md-3 col-sm-5 col-12">
             <div>
                 <h6>Type Demande</h6>
