--- a/src/app/Imprimerie_Officielle/publier-demande/publier-demande.component.html
+++ b/src/app/Imprimerie_Officielle/publier-demande/publier-demande.component.html
@@ -38,12 +38,12 @@
                             <p>{{demande.annee_demande}}</p>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-5 col-12">
+                    <!-- <div class="col-md-3 col-sm-5 col-12">
                         <div>
                             <h6>Numero Demande</h6>
                             <p>{{demande.num_demande}}</p>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-md-3 col-sm-5 col-12">
                         <div>
                             <h6>Type Demande</h6>
