--- a/src/app/Validateur/valider-demande/valider-demande.component.html
+++ b/src/app/Validateur/valider-demande/valider-demande.component.html
@@ -118,7 +118,7 @@
                     </div>
 
 
-                    <div class="col-md-5">
+                    <!-- <div class="col-md-5">
                         <div class="form-group">
                             <label for="num_demande">Num demande</label>
                             <input type="number" class="form-control" id="num_demande" formControlName="num_demande"
@@ -130,7 +130,7 @@
                                 Please enter a valid number.
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="row gx-2 p-2 justify-content-between border rounded mt-3">
