--- a/src/app/Agent/creer-demande/creer-demande.component.html
+++ b/src/app/Agent/creer-demande/creer-demande.component.html
@@ -122,7 +122,7 @@
                     </div>
 
 
-                    <div class="col-md-5">
+                    <!-- <div class="col-md-5">
                         <div class="form-group">
                             <label for="num_demande">Num demande</label>
                             <input type="number" class="form-control" id="num_demande" formControlName="num_demande"
@@ -134,7 +134,7 @@
                                 Please enter a valid number.
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
 
